--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,3 +10,10 @@ spring:
       ddl-auto: update
 server:
   port: 8430
+
+feign:
+  client:
+    config:
+      default:
+        loggerLevel: basic
+        errorDecoder: com.tlh.rms.common.interservice.ServiceClientErrorDecoder
